--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,17 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@font-face {
+  font-family: "Axiforma";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/kastelov_-_axiforma_light-webfont.woff2") format("woff2"),
+    url("/fonts/kastelov_-_axiforma_light-webfont.woff") format("woff");
+  font-display: swap;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+@font-face {
+  font-family: "Axiforma";
+  font-style: normal;
+  font-weight: 700;
+  src: url("/fonts/kastelov_-_axiforma_bold-webfont.woff2") format("woff2"),
+    url("/fonts/kastelov_-_axiforma_bold-webfont.woff") format("woff");
+  font-display: swap;
 }
